test/errmsg/zero-size-array.c.pedantic-errors.expect
---- stdout ----
errmsg/zero-size-array.c:4:5: error: Pedantic: Array size must not be zero (per C11 6.7.6.2p1).
---- stderr ----
---- exit status ----
Exit 2
